Topo e Criação de quizz adicionados

--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="estilos/reset.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="estilos/estilos.css">    
+    <title>BuzzQuizz</title>
+
 </head>
 <body>
-    
+
+<div class="topo">
+    <p>BuzzQuizz</p>
+</div>
+ <div class="caixa-criar-quizz">
+    <p> Você não criou nenhum <br>quizz ainda :( </p>
+
+    <button class="botao-criar-quizz">Criar Quizz </button>
+ </div>
 </body>
 </html>
