--- a/index.html
+++ b/index.html
@@ -5,8 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet" href="estilos/estilos.css">
 </head>
 <body>
-    
+    <div class="todosQuiz">
+        <div class="quiz">
+            <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" alt="Os simpsons">
+            <div class="texto">Veja 30 temproa de Os simpson</div>
+        </div>
+        <div class="quiz">
+            <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" alt="Os simpsons">
+            <div class="texto">Veja 30 temproa de Os simpson</div>
+        </div>
+        <div class="quiz">
+            <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" alt="Os simpsons">
+            <div class="texto">Veja 30 temproa de Os simpson</div>
+        </div>
+        <div class="quiz">
+            <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" alt="Os simpsons">
+            <div class="texto">Veja 30 temproa de Os simpson</div>
+        </div>
+        <div class="quiz">
+            <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" alt="Os simpsons">
+            <div class="texto">Veja 30 temproa de Os simpson</div>
+        </div>
+        <div class="quiz">
+            <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" alt="Os simpsons">
+            <div class="texto">Veja 30 temproa de Os simpson</div>
+        </div>
+    </div>
 </body>
 </html>
