adicionando mais uma div no desktop

--- a/index.html
+++ b/index.html
@@ -22,6 +22,23 @@
         <button class="botao-criar-quizz">Criar Quizz </button>
     </div>
 
+    <span>Seus quizzes</span>
+    <div class="seusQuiz">
+        <div class="quiz">
+            <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" alt="Os simpsons">
+            <div class="texto">Veja 30 temproa de Os simpson</div>
+        </div>
+        <div class="quiz">
+            <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" alt="Os simpsons">
+            <div class="texto">Veja 30 temproa de Os simpson</div>
+        </div>
+        <div class="quiz">
+            <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" alt="Os simpsons">
+            <div class="texto">Veja 30 temproa de Os simpson</div>
+        </div>
+    </div>
+
+    <span>Todos os quizzes</span>
     <div class="todosQuiz">
         <div class="quiz">
             <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" alt="Os simpsons">
