Icon vermelho adicionado

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <button class="botao-criar-quizz">Criar Quizz </button>
     </div>
 
-    <span>Seus quizzes</span>
+    <span>Seus quizzes</span><ion-icon name="add-circle" class="icon-titulo"></ion-icon>
     <div class="seusQuiz">
         <div class="quiz">
             <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" alt="Os simpsons">
@@ -65,6 +65,6 @@
             <div class="texto">Veja 30 temproa de Os simpson</div>
         </div>
     </div>
-
+    <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
 </body>
 </html>
