--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
         <button class="botao-criar-quizz">Criar Quizz </button>
     </div>
 
-    <span>Seus quizzes</span><ion-icon name="add-circle" class="icon-titulo"></ion-icon>
+    <div class=titulo>
+        <span class=titulo-div>Seus quizzes</span><ion-icon name="add-circle" class="icon-titulo"></ion-icon>
+    </div>
     <div class="seusQuiz">
         <div class="quiz">
             <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" alt="Os simpsons">
@@ -38,7 +40,7 @@
         </div>
     </div>
 
-    <span>Todos os quizzes</span>
+    <span class=titulo-div>Todos os quizzes</span>
     <div class="todosQuiz">
         <div class="quiz">
             <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" alt="Os simpsons">
