layout desktot seus/todos quizzes

--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
     </div>
 
     <div class=titulo>
-        <span class=titulo-div>Seus quizzes</span><ion-icon name="add-circle" class="icon-titulo"></ion-icon>
+        <span>Seus quizzes</span><ion-icon name="add-circle" class="icon-titulo"></ion-icon>
     </div>
+
     <div class="seusQuiz">
         <div class="quiz">
             <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" alt="Os simpsons">
@@ -40,7 +41,10 @@
         </div>
     </div>
 
-    <span class=titulo-div>Todos os quizzes</span>
+    <div class=titulo>
+        <span>Todos quizzes</span>
+    </div>
+
     <div class="todosQuiz">
         <div class="quiz">
             <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" alt="Os simpsons">
