--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
         <button class="botao-criar-quizz">Criar Quizz </button>
     </div>
 
-    <div class=titulo>
+    <div class="titulo escondido">
         <span>Seus quizzes</span><ion-icon name="add-circle" class="icon-titulo"></ion-icon>
     </div>
 
-    <div class="seusQuiz">
+    <div class="seusQuiz escondido">
         <div class="quiz">
             <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" alt="Os simpsons">
-            <div class="texto">Veja 30 temproa de Os simpson</div>
+            <div class="texto">Veja 30 temproa de Os simpson Veja 30 temproa de Os simpson </div>
         </div>
         <div class="quiz">
             <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" alt="Os simpsons">
@@ -42,7 +42,7 @@
     </div>
 
     <div class=titulo>
-        <span>Todos quizzes</span>
+        <span>Todos os Quizzes</span>
     </div>
 
     <div class="todosQuiz">
