--- a/index.html
+++ b/index.html
@@ -16,58 +16,58 @@
     <div class="topo">
         <p>BuzzQuizz</p>
     </div>
-    <div class="caixa-criar-quizz">
+    <div class="caixa-criar-quizz escondido">
         <p> Você não criou nenhum <br>quizz ainda :( </p>
     
         <button class="botao-criar-quizz">Criar Quizz </button>
     </div>
 
-    <div class="titulo escondido">
+    <div class="titulo primeiro">
         <span>Seus quizzes</span><ion-icon name="add-circle" class="icon-titulo"></ion-icon>
     </div>
 
-    <div class="seusQuiz escondido">
+    <div class="seusQuiz">
         <div class="quiz">
-            <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" alt="Os simpsons">
+            <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" >
             <div class="texto">Veja 30 temproa de Os simpson Veja 30 temproa de Os simpson </div>
         </div>
         <div class="quiz">
-            <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" alt="Os simpsons">
+            <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" >
             <div class="texto">Veja 30 temproa de Os simpson</div>
         </div>
         <div class="quiz">
-            <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" alt="Os simpsons">
+            <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" >
             <div class="texto">Veja 30 temproa de Os simpson</div>
         </div>
     </div>
 
-    <div class=titulo>
+    <div class="titulo">
         <span>Todos os Quizzes</span>
     </div>
 
     <div class="todosQuiz">
         <div class="quiz">
-            <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" alt="Os simpsons">
+            <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" >
             <div class="texto">Veja 30 temproa de Os simpson</div>
         </div>
         <div class="quiz">
-            <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" alt="Os simpsons">
+            <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" >
             <div class="texto">Veja 30 temproa de Os simpson</div>
         </div>
         <div class="quiz">
-            <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" alt="Os simpsons">
+            <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" >
             <div class="texto">Veja 30 temproa de Os simpson</div>
         </div>
         <div class="quiz">
-            <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" alt="Os simpsons">
+            <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" >
             <div class="texto">Veja 30 temproa de Os simpson</div>
         </div>
         <div class="quiz">
-            <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" alt="Os simpsons">
+            <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" >
             <div class="texto">Veja 30 temproa de Os simpson</div>
         </div>
         <div class="quiz">
-            <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" alt="Os simpsons">
+            <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" >
             <div class="texto">Veja 30 temproa de Os simpson</div>
         </div>
     </div>
