--- a/index.html
+++ b/index.html
@@ -21,56 +21,66 @@
     
         <button class="botao-criar-quizz">Criar Quizz </button>
     </div>
+    <div class="tela1 escondido">
+        <div class="titulo primeiro">
+            <span>Seus quizzes</span><ion-icon name="add-circle" class="icon-titulo"></ion-icon>
+        </div>
 
-    <div class="titulo primeiro">
-        <span>Seus quizzes</span><ion-icon name="add-circle" class="icon-titulo"></ion-icon>
+        <div class="seusQuiz">
+            <div class="quiz">
+                <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" >
+                <div class="texto">Veja 30 temproa de Os simpson Veja 30 temproa de Os simpson </div>
+            </div>
+            <div class="quiz">
+                <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" >
+                <div class="texto">Veja 30 temproa de Os simpson</div>
+            </div>
+            <div class="quiz">
+                <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" >
+                <div class="texto">Veja 30 temproa de Os simpson</div>
+            </div>
+        </div>
+
+        <div class="titulo">
+            <span>Todos os Quizzes</span>
+        </div>
+
+        <div class="todosQuiz">
+            <div class="quiz">
+                <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" >
+                <div class="texto">Veja 30 temproa de Os simpson</div>
+            </div>
+            <div class="quiz">
+                <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" >
+                <div class="texto">Veja 30 temproa de Os simpson</div>
+            </div>
+            <div class="quiz">
+                <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" >
+                <div class="texto">Veja 30 temproa de Os simpson</div>
+            </div>
+            <div class="quiz">
+                <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" >
+                <div class="texto">Veja 30 temproa de Os simpson</div>
+            </div>
+            <div class="quiz">
+                <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" >
+                <div class="texto">Veja 30 temproa de Os simpson</div>
+            </div>
+            <div class="quiz">
+                <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" >
+                <div class="texto">Veja 30 temproa de Os simpson</div>
+            </div>
+        </div>
     </div>
 
-    <div class="seusQuiz">
-        <div class="quiz">
-            <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" >
-            <div class="texto">Veja 30 temproa de Os simpson Veja 30 temproa de Os simpson </div>
-        </div>
-        <div class="quiz">
-            <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" >
-            <div class="texto">Veja 30 temproa de Os simpson</div>
-        </div>
-        <div class="quiz">
-            <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" >
-            <div class="texto">Veja 30 temproa de Os simpson</div>
-        </div>
+    <div class="tela2">
+
     </div>
 
-    <div class="titulo">
-        <span>Todos os Quizzes</span>
-    </div>
+    <div class="tela3">
 
-    <div class="todosQuiz">
-        <div class="quiz">
-            <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" >
-            <div class="texto">Veja 30 temproa de Os simpson</div>
-        </div>
-        <div class="quiz">
-            <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" >
-            <div class="texto">Veja 30 temproa de Os simpson</div>
-        </div>
-        <div class="quiz">
-            <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" >
-            <div class="texto">Veja 30 temproa de Os simpson</div>
-        </div>
-        <div class="quiz">
-            <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" >
-            <div class="texto">Veja 30 temproa de Os simpson</div>
-        </div>
-        <div class="quiz">
-            <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" >
-            <div class="texto">Veja 30 temproa de Os simpson</div>
-        </div>
-        <div class="quiz">
-            <img src="Imagens/30ª-temporada-dos-Simpsons-estreia-hoje-na-FOX-com-três-episódios-inéditos.jpg" >
-            <div class="texto">Veja 30 temproa de Os simpson</div>
-        </div>
     </div>
+    
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
 </body>
 </html>
