--- a/index.html
+++ b/index.html
@@ -158,7 +158,15 @@
             </div>
 
             <div class="botao">
-                Finaliza Quizz
+                Finalizar Quizz
+            </div>
+        </div>
+
+        <div class="quizz-concluido ">
+            <h1>Seu quizz está pronto</h1>
+            <img src="" alt="">
+            <div class="botao">
+                Acessar quizz
             </div>
         </div>
 
