Preprando pro merge

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             </div>
         </div>
 
-        <div class="quizz-concluido ">
+        <div class="quizz-concluido escondido">
             <h1>Seu quizz está pronto</h1>
             <img src="" alt="">
             <div class="botao">
