--- a/index.html
+++ b/index.html
@@ -246,6 +246,9 @@
     </div>
 
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
+    <script src="scripts/script1.js"></script>
+    <script src="scripts/script2.js"></script>
+    <script src="scripts/script3.js"></script>
 </body>
 
 </html>
