--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         </div>
 
     </div>
-    <div class="tela3 escondido">
+    <div class="tela3 ">
 
         <div class="comeco escondido">
             <h1>Comece pelo começo</h1>
