Populando os quizzes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p>BuzzQuizz</p>
     </div>
 
-    <div class="tela1 escondido">
+    <div class="tela1">
         <div class="caixa-criar-quizz escondido">
             <p> Você não criou nenhum <br>quizz ainda :( </p>
         
@@ -246,6 +246,7 @@
     </div>
 
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="scripts/script1.js"></script>
     <script src="scripts/script2.js"></script>
     <script src="scripts/script3.js"></script>
