Adicionando as restriçoes dos campos

--- a/index.html
+++ b/index.html
@@ -174,20 +174,20 @@
                 <div class="pergunta-completa">
                     <div class="perguntas">
                         <span>Pergunta 1</span>
-                        <input type="text" placeholder="Texto da pergunta">
-                        <input type="text" placeholder="Cor de fundo da pergunta">
+                        <input type="text" placeholder="Texto da pergunta" id="input-textoPergunta">
+                        <input type="text" placeholder="Cor de fundo da pergunta" id="input-corFundo">
                     </div>
                     
                     <div class="resposta-correta">
                         <span>Resposta correta</span>
-                        <input type="text" placeholder="Resposta correta">
+                        <input type="text" placeholder="Resposta correta" id="input-respostaCorreta">
                         <input type="text" placeholder="Url da imagem">
                     </div>
 
                     <div class="resposta-incorreta">
                         <span>Resposta incorreta</span>
                         <div class="alternativa-incorreta">
-                            <input type="text" placeholder="Resposta incorreta 1">
+                            <input type="text" placeholder="Resposta incorreta 1" id="input-respostaIncorreta1">
                             <input type="text" placeholder="URL da imagem 1">
                         </div>
                     </div>
