--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </div>
     </div>
 
-    <div class="tela2 escondido">
+    <div class="tela2 ">
         <div class="banner">
             <img src="Imagens/hogwarts.png" alt="hogwarts">
             <p>O quão Potterhead é você?</p>
@@ -129,13 +129,13 @@
                     <img src="Imagens/gatin.png" alt="gato">
                     <p>Gatíneo</p>
                 </div>
-                <div class="reposta">
+                <div class="reposta ">
                     <img src="Imagens/gatin.png" alt="gato">
                     <p>Gatíneo</p>
                 </div>
             </div>
         </div>
-
+        <div class="telafinal">
         <div class="final">
             <div class="acertos">
                 <p>88% de acerto: Você é praticamente um aluno de Hogwarts!</p>
@@ -151,7 +151,7 @@
             <button class="reinicio"> Reiniciar Quizz</button>
             <p class="volta">Voltar pra home</p>
         </div>
-
+</div>
     </div>
     <div class="tela3 ">
 
@@ -246,6 +246,7 @@
     </div>
 
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="scripts/script1.js"></script>
     <script src="scripts/script2.js"></script>
     <script src="scripts/script3.js"></script>
