--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p>BuzzQuizz</p>
     </div>
 
-    <div class="tela1 escondido">
+    <div class="tela1">
         <div class="caixa-criar-quizz escondido">
             <p> Você não criou nenhum <br>quizz ainda :( </p>
         
@@ -153,7 +153,7 @@
         </div>
 
     </div>
-    <div class="tela3">
+    <div class="tela3 escondido">
 
         <div class="comeco ">
             <h1>Comece pelo começo</h1>
@@ -174,21 +174,25 @@
                 <div class="pergunta-completa">
                     <div class="perguntas">
                         <span>Pergunta 1</span>
-                        <input type="text" placeholder="Texto da pergunta" id="input-textoPergunta">
-                        <input type="text" placeholder="Cor de fundo da pergunta" id="input-corFundo">
+                        <input type="text" placeholder="Texto da pergunta" id="input-textoPergunta1">
+                        <input type="text" placeholder="Cor de fundo da pergunta" id="input-corFundo1">
                     </div>
                     
                     <div class="resposta-correta">
                         <span>Resposta correta</span>
-                        <input type="text" placeholder="Resposta correta" id="input-respostaCorreta">
+                        <input type="text" placeholder="Resposta correta" id="input-respostaCorreta1">
                         <input type="text" placeholder="Url da imagem">
                     </div>
 
                     <div class="resposta-incorreta">
                         <span>Resposta incorreta</span>
-                        <div class="alternativa-incorreta">
-                            <input type="text" placeholder="Resposta incorreta 1" id="input-respostaIncorreta1">
-                            <input type="text" placeholder="URL da imagem 1">
+                        <div class="alternativa-incorreta1">
+                            <input type="text" placeholder="Resposta incorreta 1" class="input-respostaIncorreta">
+                            <input type="text" placeholder="URL da imagem 1" class="input-respostaIncorreta">
+                            <input type="text" placeholder="Resposta incorreta 1" class="input-respostaIncorreta">
+                            <input type="text" placeholder="URL da imagem 1" class="input-respostaIncorreta">
+                            <input type="text" placeholder="Resposta incorreta 1" class="input-respostaIncorreta">
+                            <input type="text" placeholder="URL da imagem 1" class="input-respostaIncorreta">
                         </div>
                     </div>
                 </div>    
