--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p>BuzzQuizz</p>
     </div>
 
-    <div class="tela1">
+    <div class="tela1 escondido">
         <div class="caixa-criar-quizz escondido">
             <p> Você não criou nenhum <br>quizz ainda :( </p>
         
@@ -153,7 +153,7 @@
         </div>
 </div>
     </div>
-    <div class="tela3 ">
+    <div class="tela3 escondido">
 
         <div class="comeco ">
             <h1>Comece pelo começo</h1>
