Até a ultima tela funcionando

--- a/index.html
+++ b/index.html
@@ -177,7 +177,10 @@
 
         <div class="quizz-concluido escondido">
             <div class="titulo3">Seu quizz está pronto</div>
-            <img src="" alt="">
+            <div class="img-quizzConcluido">
+                <img src="">
+                <div class="texto-quizzConcluido"></div>
+            </div>
 
             <div class="botao">
                 Acessar quizz
