Envio de dados funcionando

--- a/index.html
+++ b/index.html
@@ -185,6 +185,10 @@
             <div class="botao">
                 Acessar quizz
             </div>
+
+            <div class="voltar-home" onclick="home()">
+                Voltar para home
+            </div>
         </div>
 
     </div>
