acessar o quizz na tela 3 agora funciona

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                 <div class="texto-quizzConcluido"></div>
             </div>
 
-            <div class="botao">
+            <div class="botao" onclick="entrarNoQuizz()">
                 Acessar quizz
             </div>
 
