botao tela1 de adicionar quizz funcionando

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     
         <div class="titulo primeiro">
             <span>Seus quizzes</span>
-            <ion-icon name="add-circle" class="icon-titulo"></ion-icon>
+            <ion-icon name="add-circle" class="icon-titulo" onclick="abreCriarQuizz()"></ion-icon>
         </div>
 
         <div class="seusQuiz">
